@@ -29,6 +29,7 @@
     itself should implement.
 18. Remove 'Add albums in random order' from view context menus.
 19. Reorganize playqueue context menu.
+20. Use 'Metadata' and not 'Tags' as metadata/tags view in context song pane.
 
 1.4.1
 -----
